Fri Jan  5 00:51:22 UTC 2007  Phil Mesnier  <mesnier_p@ociweb.com>

        * ace/INET_Addr.h:
        * ace/INET_Addr.inl:

          Added a new method, is_multicast(), to assist applications in
          determining if the inet address is or is not a multicast address
          regardless of it being an IPv4 or IPv6 format.

        * ace/Timer_Queue_Adapters.cpp:

          Fixed a bug in
          ACE_Async_Timer_Queue_Adapter<TQ>::schedule_ualarm() wherein the
          time value for the alarm was computed using
          ACE_OS::gettimeofday() rather than using the timer queue's
          gettimeofday implementation. Thus situations where an alternate
          time source were used, the scheduled alarm would be wrong.

Thu Jan  4 15:51:41 UTC 2007  Chris Cleeland  <cleeland_c@ociweb.com>

        * tests/Thread_Creation_Threshold_Test.cpp: Changed name of
          anonymous namespace constant from DEBUG to PRINT_DEBUG_MSGS to
          avoid potential conflicts with #defines.  This should clean up
          at least one Windows build, and possibly others as well.

Thu Jan  4 15:33:08 UTC 2007  J.T. Conklin  <jtc@acorntoolworks.com>

        * configure.ac:

          Check <sys/time.h> instead of <time.h> for gettimeofday()
          prototype.  Also use AC_CHECK_DECL instead of AC_EGREP_CPP.
          This fixes bugzilla bug 2764.

Thu Jan  4 13:53:33 UTC 2007  J.T. Conklin  <jtc@acorntoolworks.com>

	* ACEXML/tests/Makefile.am:
	* ACEXML/tests/util/Makefile.am:
	* ACEXML/apps/svcconf/Makefile.am:
	* ACEXML/common/Makefile.am:
	* ACEXML/examples/SAXPrint/Makefile.am:

          Tweak to use ACE_{ZLIB,ZZIP}_{CPPFLAGS,LDFLAGS,LIBS}
          instead of -I${ZLIB_ROOT}/include, etc.  The former
          are substituted by the configure script.

	* m4/ace.m4:

          Add ACE_PATH_ZLIB and ACE_PATH_ZZIP autoconf macros.
          zlib and zzip can now be enabled at configure time
          with --with-zlib and --with-zzip.
